libs/modkit-macros-tests/tests/ui/fail/module_name_starts_hyphen.stderr
error: module name must start with a lowercase letter, found '-'
 --> tests/ui/fail/module_name_starts_hyphen.rs:6:12
  |
6 |     name = "-parser",  // Should fail: starts with hyphen
  |            ^^^^^^^^^
